--- a/docker/nodejs/Dockerfile
+++ b/docker/nodejs/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:9.4.0
+FROM node:9.6.0
 
 # File Author / Maintainer
 MAINTAINER Aaron Benton
@@ -10,11 +10,11 @@ COPY package.json /usr/src/package.json
 RUN cd /usr/src; npm install
 
 # source
-COPY ./app /usr/src
+COPY ./app /usr/src/app
 WORKDIR /usr/src
 
 ENV PATH=/usr/src/node_modules/.bin:$PATH
 
 EXPOSE  8080
 
-CMD ["nodemon", "app/index.js"]
+CMD ["nodemon", "/usr/src/app/index.js"]
